<resources>
    <string name="app_name">Appetit</string>
    <string name="sign_in_title_label">Seja bem-vindo(a)!</string>
    <string name="sign_in_subtitle_label">Nós sabemos a importância de estar sempre de barriga cheia e o quanto isso pode ajudar no seu dia.</string>
    <string name="sign_in_empty_fields_error">Preencha todos os campos</string>
    <string name="sign_in_email_complete_hint">Insira seu email aqui</string>
    <string name="sign_in_email_field_hint">Email</string>
    <string name="sign_in_password_complete_hint">Insira sua senha aqui</string>
    <string name="sign_in_password_field_hint">Senha</string>
    <string name="main_search_label">Digite sua busca aqui</string>
    <string name="main_new_sale_label">FAZER NOVO PEDIDO</string>
    <string name="new_sale_title_label">Informações para o pedido</string>
    <string name="new_sale_subtitle_label">Preencha as informações abaixo para concluir o pedido.</string>
    <string name="detail_product_title_label">Detalhes do pedido</string>
    <string name="detail_product_subtitle_label">Caso queira, aproveite para adicionar alguma observação para este pedido.</string>
    <string name="detail_product_option_title">Opções</string>
    <string name="detail_product_option_subtitle">Escolha uma das opções de massas disponíveis abaixo.</string>
    <string name="detail_product_comments">Observações</string>
    <string name="choose_product_comments_field_hint">Deseja adicionar alguma obs.?</string>
    <string name="detail_product_add_label">Adicionar</string>
    <string name="detail_product_emption_option_error_toast">Escolha uma opção para continuar</string>
    <string name="choose_product_total_label">Total:</string>
    <string name="choose_client_total_singular_label">cliente selecionado</string>
    <string name="choose_client_total_plural_label">clientes selecionados</string>
    <string name="new_sale_progress_title_label_step_1">O que você está vendendo?</string>
    <string name="new_sale_progress_title_label_step_2">Para quem você está vendendo?</string>
    <string name="new_sale_progress_title_label_step_3">Finalizar pedido</string>
    <string name="new_sale_progress_step_1">1 de 3</string>
    <string name="new_sale_progress_step_2">2 de 3</string>
    <string name="new_sale_progress_step_3">3 de 3</string>
    <string name="new_sale_title_list_label">Meus clientes</string>
    <string name="finish_sale_title_label">O cliente já pagou?</string>
    <string name="finish_sale_title_date_label">Em que data o pedido foi realizado?</string>
    <string name="finish_sale_label_button">Finalizar Pedido</string>
    <string name="finish_sale_date_error_toast">Escolha uma data para continuar</string>
    <string name="finish_sale_is_paid_error_toast">O pedido já foi pago? Escolha uma opção</string>
    <string name="feedback_title_label">Pedido realizado!</string>
    <string name="feedback_another_sale_label_button">Fazer um novo pedido</string>
    <string name="feedback_back_label_button">Voltar para a página inicial</string>
</resources>
