<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/detailProductAddContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_general_margin_8"
        android:elevation="8dp"
        android:minHeight="70dp"
        android:visibility="gone"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toStartOf="@id/detailProductNextContainer"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detailProductRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="35dp"
                    android:tint="@color/colorGrey"
                    app:srcCompat="@drawable/ic_remove" />

                <TextView
                    android:id="@+id/detailProductQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="1"
                    android:textSize="@dimen/font_size_24" />

                <ImageView
                    android:id="@+id/detailProductAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="35dp"
                    android:minHeight="35dp"
                    app:srcCompat="@drawable/ic_add" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailProductNextContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/orange_background"
                android:orientation="horizontal"
                android:padding="@dimen/activity_general_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_general_margin_32"
                    android:text="@string/detail_product_add_label"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailProductTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/detailProductMainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/detailProductAddContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.new_sale.step1.DetailProductActivity">

            <ImageView
                android:id="@+id/detailProductBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_general_margin"
                app:srcCompat="@drawable/ic_left_arrow" />

            <TextView
                android:id="@+id/newSaleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/detail_product_title_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_24" />

            <!-- Line content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:weightSum="7">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/activity_general_margin_8"
                    android:layout_weight="5"
                    android:background="@color/colorAccent" />

                <!--  Hack para alocar a linha verde em um espaço similar ao do design  -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/activity_general_margin_8"
                    android:layout_weight="2" />
            </LinearLayout>

            <TextView
                android:id="@+id/newSaleSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/detail_product_subtitle_label"
                android:textSize="@dimen/font_size_18" />


            <androidx.cardview.widget.CardView
                android:id="@+id/detailProductInfoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_general_margin_8"
                android:elevation="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:paddingStart="@dimen/activity_general_margin_64"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/detailProductPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_size_18"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/detailProductPrice">

                        <TextView
                            android:id="@+id/detailProductName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/font_size_18"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detailProductDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/detailProductName"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/font_size_18" />

                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/colorBorderGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/detail_product_option_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_general_margin_4"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/detail_product_option_subtitle"
                android:textSize="@dimen/font_size_18" />

            <RadioGroup
                android:id="@+id/detailProductOptionsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/detail_product_comments"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/detailProductComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_general_margin_4"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/outline_border"
                android:hint="@string/choose_product_comments_field_hint"
                android:inputType="textCapSentences"
                android:lines="2"
                android:padding="18dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>